WP-9135 bredcrumb alignment issue fixes

--- a/sass/conditionals/voices-detail.sass
+++ b/sass/conditionals/voices-detail.sass
@@ -249,6 +249,8 @@
   // Breadcrumbs
   .breadcrumb
     padding: 0 0 0 35px
+    +breakpoint($bp-desktop-custm-width-new)
+      padding-left: 0px
 
   .field-name-social-buttons-top
     border-bottom: 1px solid $voices-divider
